Change to black code style

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,9 @@ description-file = README.md
 [flake8]
 max-complexity = 10
 exclude = .git,.tox,__pycache__,pyenv,build,dist
-# the new Torvalds default for line length
-max-line-length = 100
 # set to true to check all ignored errors
 disable_noqa = False
+
+# adaptions for black
+max-line-length = 88
+extend-ignore = E203
